Added other containers and styling

--- a/index.html
+++ b/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <style>
+        @font-face {
+            font-family:"norse" ;
+            src: url('font/norse-bold-webfont.woff2') format('woff2');
+            src: url('font/norse-bold-webfont.woff') format('woff');
+        }
+    </style>
+    <title>Sign-up Form</title>
 </head>
+
 <body>
-    <div id="title">
-        <p>Odin</p>
+    <div class="imageContainer">
+        
+        <div class="title">
+            <img src="img/odin-lined.png">
+            <h1>Odin</h1>
+        </div>
+
+        <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
     </div>
+    
     <div id="right">
         <p>This is not a real online service! You know you need something
             like this in your life to help you realize your deepest dreams.
             Sign up <em>now</em> to get started.
         </p>
         <p>You <em>know</em> you want to.</p>
-        <form method="get">
+        <form action="" method="">
             <fieldset>
                 <p>Let's do this!</p>
 
