Got rid of reset, added my own reset to make things easier

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <div class="imageContainer">
         
         <div class="title">
-            <img src="img/odin-lined.png">
-            <h1>Odin</h1>
+            <div class="banner">
+                <img src="img/odin-lined.png">
+                <h1>Odin</h1>
+            </div>
+
         </div>
 
         <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
