--- a/index.html
+++ b/index.html
@@ -15,18 +15,15 @@
 </head>
 
 <body>
-    <div class="imageContainer">
-        
+<div class="container">
+    <div class="imageSection">
         <div class="title">
-            <div class="banner">
-                <img src="img/odin-lined.png">
-                <h1>Odin</h1>
-            </div>
-
+            <img src="img/odin-lined.png">
+            Odin
         </div>
-
         <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
     </div>
+
     
     <div id="right">
         <p>This is not a real online service! You know you need something
@@ -61,5 +58,6 @@
             </fieldset>
         </form>
     </div>
+</div>
 </body>
 </html>
