Finished the image-section of the css

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <div class="imageSection">
         <div class="title">
             <img src="img/odin-lined.png">
-            Odin
+            <h2>Odin</h2>
         </div>
         <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
     </div>
 
-    
     <div id="right">
         <p>This is not a real online service! You know you need something
             like this in your life to help you realize your deepest dreams.
