--- a/index.html
+++ b/index.html
@@ -16,47 +16,47 @@
 
 <body>
 <div class="container">
-    <div class="imageSection">
-        <div class="title">
-            <img src="img/odin-lined.png">
-            <h2>Odin</h2>
-        </div>
-        <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
+<div class="imageSection">
+    <div class="title">
+        <img src="img/odin-lined.png">
+        <h2>Odin</h2>
     </div>
+    <div class="photoBy"><p>Photo by Halie West on Unsplash</p></div>
+</div>
 
-    <div id="right">
-        <p>This is not a real online service! You know you need something
-            like this in your life to help you realize your deepest dreams.
-            Sign up <em>now</em> to get started.
-        </p>
-        <p>You <em>know</em> you want to.</p>
-        <form action="" method="">
-            <fieldset>
-                <p>Let's do this!</p>
+<div class="textSection">
+    <p>This is not a real online service! You know you need something
+        like this in your life to help you realize your deepest dreams.
+        Sign up <em>now</em> to get started.
+    </p>
+    <p>You <em>know</em> you want to.</p>
+    <form action="" method="">
+        <fieldset class="formSection">
+            <p>Let's do this!</p>
 
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="first-name">
-                <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="last-name">
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" id="first-name" name="first-name">
+            <label for="last-name">LAST NAME</label>
+            <input type="text" id="last-name" name="last-name">
 
-                <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email">
-                <label for="phone#"></label>PHONE NUMBER</label>
-                <input type="number" id="phone#" name="phone#">
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email">
+            <label for="phone#"></label>PHONE NUMBER</label>
+            <input type="number" id="phone#" name="phone#">
 
-                <label for="pwd">PASSWORD</label>
-                <input type="password" id="pwd" name="pwd">
-                <label for="confirm">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm" name="pwd-confirm">
+            <label for="pwd">PASSWORD</label>
+            <input type="password" id="pwd" name="pwd">
+            <label for="confirm">CONFIRM PASSWORD</label>
+            <input type="password" id="confirm" name="pwd-confirm">
 
-                <div class="button">
-                    <button type="submit">Create Accouunt</button>
-                </div>
+            <div class="button">
+                <button type="submit">Create Accouunt</button>
+            </div>
 
-                <p>Already have an account?<link> Log in</p>
-            </fieldset>
-        </form>
-    </div>
+            <p>Already have an account?<link> Log in</p>
+        </fieldset>
+    </form>
+</div>
 </div>
 </body>
 </html>
