--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
     <p>You <em>know</em> you want to.</p>
     <form action="" method="">
         <fieldset class="formSection">
-            <p>Let's do this!</p>
+            <h3>Let's do this!</h3>
+            <div class="input">
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="first-name">
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="last-name" class="focus">
 
-            <label for="first-name">FIRST NAME</label>
-            <input type="text" id="first-name" name="first-name">
-            <label for="last-name">LAST NAME</label>
-            <input type="text" id="last-name" name="last-name">
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email">
+                <label for="phone#">PHONE NUMBER</label>
+                <input type="number" id="phone#" name="phone#">
 
-            <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email">
-            <label for="phone#"></label>PHONE NUMBER</label>
-            <input type="number" id="phone#" name="phone#">
-
-            <label for="pwd">PASSWORD</label>
-            <input type="password" id="pwd" name="pwd">
-            <label for="confirm">CONFIRM PASSWORD</label>
-            <input type="password" id="confirm" name="pwd-confirm">
-
-            <div class="button">
-                <button type="submit">Create Accouunt</button>
+                <label for="pwd">PASSWORD</label>
+                <input type="password" id="pwd" name="pwd" class="error">
+                <label for="confirm">CONFIRM PASSWORD</label>
+                <input type="password" id="confirm" name="pwd-confirm" class="error">
             </div>
+                <div class="button">
+                    <button type="submit">Create Accouunt</button>
+                </div>
 
             <p>Already have an account?<link> Log in</p>
         </fieldset>
