added classes to work on the create account button and log in messages

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <input type="password" id="confirm" name="pwd-confirm" class="error">
             </div>
                 <div class="button">
-                    <button type="submit">Create Accouunt</button>
+                    <button type="submit" class="create-button">Create Accouunt</button>
                 </div>
 
-            <p>Already have an account?<link> Log in</p>
+            <p class="log-in">Already have an account?<link> Log in</p>
         </fieldset>
     </form>
 </div>
