--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <input type="password" id="confirm" name="pwd-confirm" class="error">
             </div>
                 <div class="button">
-                    <button type="submit" class="create-button">Create Accouunt</button>
+                    <button type="submit" class="create-button">Create Account</button>
                 </div>
 
             <p class="log-in">Already have an account?<link> Log in</p>
