finished css on log in message

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <button type="submit" class="create-button">Create Account</button>
                 </div>
 
-            <p class="log-in">Already have an account?<link> Log in</p>
+            <p class="log-in">Already have an account?<a href="#"> Log in</p>
         </fieldset>
     </form>
 </div>
