--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <label for="first-name">FIRST NAME</label>
                 <input type="text" id="first-name" name="first-name">
                 <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="last-name" class="focus">
+                <input type="text" id="last-name" name="last-name">
 
                 <label for="email">EMAIL</label>
                 <input type="email" id="email" name="email">
@@ -45,9 +45,9 @@
                 <input type="number" id="phone#" name="phone#">
 
                 <label for="pwd">PASSWORD</label>
-                <input type="password" id="pwd" name="pwd" class="error">
+                <input type="password" id="pwd" name="pwd">
                 <label for="confirm">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm" name="pwd-confirm" class="error">
+                <input type="password" id="confirm" name="pwd-confirm">
             </div>
                 <div class="button">
                     <button type="submit" class="create-button">Create Account</button>
